# IMU_Encoder

./: .gitignore  CMakeLists.txt  ImuEKF.cpp  ImuEKF.h  ImuEncEKF.cpp  ImuEncEKF.h  README.md  common.h  keywords.txt  math_utils.h
examples/arduino/balance_bot/: balance_bot.ino
examples/arduino/imu_ekf_example/: imu_ekf_example.ino
examples/arduino/imu_ekf_example/visualize_imu/: visualize_imu.pde
examples/arduino/imu_example/: imu_example.ino
examples/arduino/imu_example/visualize_imu/: visualize_imu.pde
examples/cmake/: Arduino.h  CMakeLists.txt  main.cpp  print.h
scripts/: quaternion_conventions.py
scripts/imu_calibrate/: README.md  compute_calib.py
scripts/imu_calibrate/imu_data/: README.md
scripts/imu_calibrate/imu_data/sample/: x_down.txt  x_up.txt  y_down.txt  y_up.txt  z_down.txt  z_up.txt
scripts/imu_calibrate/stream_IMU_data/: stream_IMU_data.ino
